[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/redPenguin.gd" type="Script" id=1]
[ext_resource path="res://assets/penguin.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.8556
height = 14.7685

[node name="redPenguin" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -156.398, 20.674 )
script = ExtResource( 1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0.913725, 0.305882, 0.305882, 1 )
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 2 )

[node name="rayCast1" type="RayCast2D" parent="."]
position = Vector2( -28.6789, 0 )
enabled = true

[node name="rayCast2" type="RayCast2D" parent="."]
position = Vector2( 29.0562, 0 )
enabled = true

[node name="rayCast3" type="RayCast2D" parent="."]
position = Vector2( 0, -35 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 40 )

[node name="rayCast4" type="RayCast2D" parent="."]
position = Vector2( 0, -35 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 40 )
